# computacion_paralela_2021_I

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/tarea_1/: CMakeLists.txt  main.cpp  readme.md
src/tarea_2/: CMakeLists.txt  main.cpp  readme.md
